<resources>
    <string name="app_name">MatchPlanner</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_login">MatchPlanner</string>


    <!--Projeto MatchPlanner-->
    <!--Atividade Login-->
    <string name="textViewSignIn">Sign In</string>
    <string name="buttonSignIn">Sign In</string>
    <string name="textViewNewUser">New User</string>
    <string name="buttonNewUser">Sign Up</string>
    <string name="hintUsername">Username</string>

    <!--Atividade escolher perfil-->
    <string name="textViewProfilePick">Choose your profile type</string>
    <string name="buttonSolo">Solo</string>
    <string name="buttonTeam">Team</string>

    <!--Atividade Sign Up Solo-->
    <string name="textViewSignUp">Already registered? Click to go to login</string>
    <string name="textViewFirstName">First Name</string>
    <string name="hintFirstName">Insert your first name</string>

    <string name="textViewLastName">Surnames</string>
    <string name="hintLastName">Insert your surnames</string>

    <string name="textViewEmail">Email</string>
    <string name="hintEmail">Insert your email</string>

    <string name="textViewSex">Gender</string>
    <string name="checkBoxMale">Male</string>
    <string name="checkBoxFemale">Female</string>

    <string name="textViewBirthDate">Birth Date</string>
    <string name="buttonBirthDate">Click to insert birthdate</string>

    <string name="textViewUsername">Username</string>
    <string name="hintSUsername">Insert your username</string>

    <string name="textViewPassword">Password</string>
    <string name="hintPassword">Insert your password</string>

    <string name="textViewRepeatPassword">Repeat Password</string>
    <string name="hintRepeatPassword">Repeat your password</string>

    <string name="buttonSignUp">Sign Up</string>

    <!--Atividade Sign Up Team-->
    <string name="textViewTeamName">Team Name</string>
    <string name="hintTeamName">Insert your team name</string>

    <string name="textViewMember1">Member 1</string>
    <string name="hintTeamMember1">Insert first member name</string>

    <string name="textViewMember2">Member 2</string>
    <string name="hintTeamMember2">Insert second member name</string>

    <string name="textViewMember3">Member 3</string>
    <string name="hintTeamMember3">Insert third member name</string>

    <string name="textViewMember4">Member 4</string>
    <string name="hintTeamMember4">Insert fourth member name</string>

    <string name="textViewMember5">Member 5</string>
    <string name="hintTeamMember5">Insert fifth member name</string>

    <string name="textViewMember6">Member 6</string>
    <string name="hintTeamMember6">Insert sixth member name</string>

    <!--Atividade Main View-->
    <string name="textViewMainView">Welcome to MatchPlanner!\nChoose what you want to do</string>

    <string name="buttonSeeProfile">See profile</string>
    <string name="buttonCreateEvent">Create event</string>

    <!--Atividade Create event-->
    <string name="textViewCreateEvent">Create an event!</string>

    <string name="textViewEventName">Event name</string>
    <string name="hintEventName">Insert the event name</string>

    <string name="textViewBeginDate">Begin Date</string>
    <string name="hintBeginDate">Insert the event begin date</string>

    <string name="textViewEndDate">End Date</string>
    <string name="hintEndDate">Insert the event end date</string>

    <string name="textViewDescription">Description</string>
    <string name="hintDescription">Insert the event description</string>

    <string name="buttonOnViewCreateEvent">Create Event</string>
    <string name="title_activity_event_view">Event View</string>

    <string name="buttonGoBack">Go Back</string>
    <string name="buttonEditEvent">Edit event</string>
    <string name="buttonSave">Save</string>

    <!--Atividade Create Post-->
    <string name="textViewCreatePost">Create a post!</string>

    <string name="textViewPostTitle">Title</string>
    <string name="hintPostTile">Insert the post title</string>

    <string name="textViewPostContent">Content</string>
    <string name="hintPostContent">Insert post information</string>

    <string name="textViewTag">Tag</string>
    <string name="hintTag">Insert tag</string>

    <string name="textViewImage">Image (optional)</string>
    <string name="hintImage">Click to add image</string>

    <string name="buttonOnViewCreatePost">Create Post</string>
    <string name="title_activity_post_view">Post View</string>

    <!--Atividade Create Comment-->
    <string name="textViewCreateComment">Create a post!</string>

    <string name="textViewCommentContent">Content</string>
    <string name="hintCommentContent">Insert the comment content</string>

    <string name="buttonOnViewCreateComment">Create Comment</string>
    <string name="title_activity_comment_view">Comment View</string>
    <string name="Erro_C_Vazio">Empty field</string>
</resources>