<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controladores.CreatePostActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".controladores.CreateEventActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/buttonGoBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonGoBack" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textViewCreatePost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewCreatePost"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textViewPostTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewPostTitle"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/editTextPostTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintPostTile" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textViewContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewPostContent"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/editTextPostContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintPostContent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textViePostTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewTag"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/editTextPostTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintTag" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textViewImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewImage"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/buttonInsertImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hintImage" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/buttonCreatePost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonOnViewCreatePost" />

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>