<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controladores.CreateEventActivity">

    <ScrollView
        android:id="@+id/scrollViewEvents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".controladores.CreateEventActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/buttonGoBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonGoBack" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textViewCreateEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewCreateEvent"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textViewEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewEventName"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/editTextEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textViewBeginDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewBeginDate"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/editTextBeginDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textViewEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewEndDate"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/editTextEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewDescription"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/buttonCreateEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonOnViewCreateEvent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/buttonCreatePost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonOnViewCreatePost" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/buttonCreateComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonOnViewCreateComment" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabEditEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_menu_edit" />
</android.support.design.widget.CoordinatorLayout>