<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controladores.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/textViewProfilePick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewProfilePick"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="187dp"
        android:text="@string/buttonSolo"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/buttonTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="54dp"
        android:text="@string/buttonTeam" />
</RelativeLayout>